--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ simplesam>=0.1.4.1
 SQLAlchemy>=2.0.11
 uvicorn>=0.22.0
 
-starlette~=0.26.1
+starlette>=0.27.0
 alembic~=1.10.4
 motor~=3.1.2
 bson~=0.5.10
